--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "express": "^4.18.2",
+    "geojson": "^0.5.0",
     "http-proxy-middleware": "^2.0.6",
     "jsonexport": "^3.2.0",
     "nodemailer": "^6.9.3",
     "ol": "^7.4.0",
     "os-browserify": "^0.3.0",
+    "proj4": "^2.9.0",
     "rxjs": "~7.8.0",
     "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
@@ -35,8 +37,11 @@
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/geojson": "^7946.0.11",
     "@types/jasmine": "~4.3.0",
     "@types/jsonexport": "^3.0.2",
+    "@types/proj4": "^2.5.3",
+    "angular-cli-ghpages": "^1.0.7",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
