--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
               "node_modules/ol/ol.css"
 
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": ["timers"]
           },
           "configurations": {
             "production": {
@@ -62,6 +63,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "Geoportal:build:production"
