--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.3",
     "@angular/platform-browser": "^15.2.0",
@@ -27,7 +28,7 @@
     "nodemailer": "^6.9.3",
     "ol": "^7.4.0",
     "os-browserify": "^0.3.0",
-    "proj4": "^2.9.0",
+    "proj4": "^2.9.2",
     "rxjs": "~7.8.0",
     "stream-browserify": "^3.0.0",
     "timers": "^0.1.1",
@@ -43,7 +44,7 @@
     "@types/geojson": "^7946.0.11",
     "@types/jasmine": "~4.3.0",
     "@types/jsonexport": "^3.0.2",
-    "@types/proj4": "^2.5.3",
+    "@types/proj4": "^2.5.5",
     "@types/xml2js": "^0.4.12",
     "angular-cli-ghpages": "^1.0.7",
     "jasmine-core": "~4.5.0",
